сделалфильтр по 6 пунктам, все ок